fix input number on ios

--- a/static/index.css
+++ b/static/index.css
@@ -4,7 +4,10 @@
 	position: relative;
 	font-family: "Helvetica";
 	color: #444;
-	-webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
+	-webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
+}
+
+*:not(input), *:focus:not(input){
 	-webkit-touch-callout: none; 
     -webkit-user-select: none;
        -moz-user-select: none; 
